--- a/ansible/group_vars/windows_server.yml
+++ b/ansible/group_vars/windows_server.yml
@@ -1,7 +1,7 @@
 ---
 # file: group_vars/windows_server
-ansible_user:     "{{ lookup('env','TF_INSTALLER_USR') }}"
-ansible_password: "{{ lookup('env','TF_INSTALLER_PWD') }}"
+ansible_user:     Administrator
+ansible_password: "{{ lookup('env','TF_VAR_WINDOWS_PWD') }}"
 ansible_connection: winrm
 ansible_winrm_transport: basic
 ansible_winrm_scheme: https
