increase wait time after reboot

--- a/ansible/roles/windows-server-2022/tasks/gui_static_IP.yml
+++ b/ansible/roles/windows-server-2022/tasks/gui_static_IP.yml
@@ -764,6 +764,11 @@
       delegate_to: localhost
       register: vm_facts
 
+    - name: Wait for reboot
+      ansible.builtin.pause:
+        seconds: 60
+
+
 #    - name: show certs
 #      community.vmware.vmware_guest_sendkey:
 #        sleep_time: 0
