--- a/ansible/roles/windows-server-2022/tasks/main.yml
+++ b/ansible/roles/windows-server-2022/tasks/main.yml
@@ -5,6 +5,7 @@
     vmware_guest: "{{ input_module_defaults.vmware_guest }}"
     vmware.vmware_rest.vcenter_vm_info: "{{ input_module_defaults.vcenter_vm_info }}"
     community.vmware.vmware_guest_sendkey: "{{ input_module_defaults.vmware_guest_sendkey }}"
+  delegate_to: localhost
   when: windows_from_iso == true
 
 - include_tasks: install_active_directory.yml
