--- a/ansible/roles/windows-server-2022/tasks/add_dns_server.yml
+++ b/ansible/roles/windows-server-2022/tasks/add_dns_server.yml
@@ -1,9 +1,5 @@
 - name: Set dns server on all visible adapters
   ansible.windows.win_dns_client:
     adapter_names: '*'
-    dns_servers:
-    - "144.254.71.184"
-    - "171.70.168.183"
-    - "64.104.123.144"
-    - "10.51.71.46"
+    dns_servers: "{{ dns.servers }}"
     log_path: C:\dns_log.txt
