--- a/ansible/roles/ubuntu-server-22.04.3/tasks/config_settings.yml
+++ b/ansible/roles/ubuntu-server-22.04.3/tasks/config_settings.yml
@@ -32,6 +32,12 @@
   timezone:
     name: "{{ ubuntu_timezone }}"
 
+- name: Copy template /etc/resolv.conf
+  tags: dns
+  template:
+    src: resolv.conf.j2
+    dest: /etc/resolv.conf
+
 #- name: "Copy NTP conf {{ centos_ntp_server }}  to /etc/ntp.conf"
 #  template:
 #    src: ntp.conf.j2
