add waiting time after reboot for ubuntu

--- a/ansible/roles/ubuntu-server-22.04.3/tasks/install_from_iso.yml
+++ b/ansible/roles/ubuntu-server-22.04.3/tasks/install_from_iso.yml
@@ -228,3 +228,7 @@
   vmware_guest:
     state: poweredon
   register: vm_facts
+
+- name: Wait for boot loader
+  ansible.builtin.pause:
+    seconds: 90
